 o CURLOPT_PROXYHEADER: set headers for proxy-only
 o CURLOPT_HEADEROPT: added
 o curl: add --proxy-header
 o sasl: Added support for DIGEST-MD5 via Windows SSPI
 o sasl: Added DIGEST-MD5 qop-option validation in native challange handling
 o imap: Expanded mailbox SEARCH support to use URL query strings [7]
 o imap: Extended FETCH support to include PARTIAL URL specifier [7]
 o 

This release includes the following bugfixes:

 o mkhelp: generate code for --disable-manual as well [1]
 o hostcheck: added a system include to define struct in_addr
 o winbuild: added warnless.c to fix build
 o Makefile.vc6: added warnless.c to fix build
 o smtp: Fixed login denied when server doesn't support AUTH capability [2]
 o smtp: Fixed login denied with a RFC-821 based server [2]
 o curl: stop interpreting IPv6 literals as glob patterns
 o http2: remove _DRAFT09 from the NPN_HTTP2 enum
 o http2: let openssl mention the exact protocol negotiated
 o http2+openssl: fix compiler warnings in ALPN using code
 o ftp: in passive data connect wait for happy eyeballs sockets [3]
 o HTTP: don't send Content-Length: 0 _and_ Expect: 100-continue [4]
 o http2: Compile with current nghttp2, which supports h2-11 [5]
 o http_negotiate_sspi: Fixed compilation when USE_HTTP_NEGOTIATE not defined
 o strerror: fix comment about vxworks' strerror_r buffer size [6]
 o url: only use if_nametoindex() if IFNAMSIZ is available
 o imap: Fixed untagged response detection when no data after command
 o 

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

  Alan, Cody Mack, Dan Fandrich, Daniel Stenberg, Jeroen Koekkoek, JimS,
  Marc Hoersken, Maciej Puzio, Melissa Mears, Paul Marks, Remi Gacogne,
  Steve Holme, Tatsuhiro Tsujikawa, Till Maas, Tom Sparrow, Vijay Panghal

        Thanks! (and sorry if I forgot to mention someone)
